--- a/2108.05169/main.tex
+++ b/2108.05169/main.tex
@@ -1,6 +1,4 @@
-\documentclass[
-prx
-,twocolumn
+\documentclass[12pt,prx,
 ,nofootinbib
 ,floatfix
 ,superscriptaddress
@@ -10,6 +8,41 @@ prx
 % \usepackage{mathptmx}
 % \DeclareMathAlphabet{\mathcal}{OMS}{cmsy}{m}{n}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage{notes2bib}
 \usepackage{natbib}
 \usepackage{gensymb}
@@ -30,12 +63,9 @@ prx
 \usepackage{bm}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{listings}
-\definecolor{blueprl}{RGB}{46,48,146}
-\usepackage[pdftex,colorlinks=true,urlcolor=blueprl,citecolor=blueprl,linkcolor=blueprl]{hyperref}
 \usepackage{mathrsfs}
 %\usepackage{filecontents}
 \usepackage{mathtools}
-\usepackage{times}
 \usepackage{color}
 \usepackage[dvipsnames]{xcolor}
 
@@ -100,7 +130,6 @@ prx
 \newcommand{\tcb}{\textcolor{blue}}
 \newcommand{\tcr}{\textcolor{red}}
 \usepackage{xtab,afterpage}
-\usepackage{hyperref}
 \usepackage{setspace,calc}
  \newcommand{\mz}{\color{green}}
 
@@ -110,10 +139,6 @@ prx
 %    citecolor=blue,
 %} 
 
-\hypersetup{ linktoc=all,
-    colorlinks, linkcolor={blueblue},
-    citecolor={greengreen}, urlcolor={blueblue}
-}
 \newcommand{\changeurlcolor}[1]{\hypersetup{urlcolor=#1}}
 % Making life easier
 \newcommand{\be}{\begin{equation}}
@@ -175,9 +200,12 @@ prx
 Bohmian mechanics is a nonlocal hidden-variable interpretation of quantum theory which predicts that particles follow deterministic trajectories in spacetime. Historically, the study of Bohmian trajectories has been restricted to nonrelativistic regimes due to the widely held belief that the theory is incompatible with special relativity. Here we derive expressions for the relativistic velocity and spacetime trajectories of photons in a Michelson-Sagnac-type interferometer. The trajectories satisfy quantum-mechanical continuity and the relativistic velocity addition rule. Our new velocity equation can be operationally defined in terms of weak measurements of momentum and energy. We finally propose a modified Alcubierre metric which could give rise to these trajectories within the paradigm of general relativity. 
 \end{abstract}
 
-\date{\today}
+\date{11 Aug 2021}
 
 \maketitle
+\newpage
+
+\section{Introduction}
 
 Ever since the conception and early development of quantum mechanics there have been debates over how to consistently interpret the mathematical objects it defines. Many of these debates, such as those concerning the physical meaning of the wavefunction \cite{aharanovPhysRevA.47.4616,weinberg_2015,Ringbauer_2015}, continue to this day. The predominant view among present-day physicists is the Copenhagen interpretation, which treats the square of the wavefunction, 
 \begin{align}\label{eq1schrodingerdensity}
@@ -209,9 +237,9 @@ Throughout this article, we utilise natural units, $\hslash = c = 1$ and the met
 \section{Results}
 \subsection{Physical setup}
 The physical geometry of our system, represented as a Michelson-Sagnac interferometer, is depicted in Fig.\ \ref{fig:setup} on a background of flat spacetime in (2+1)-dimensions. A controllable beamsplitter diverts the path of the single photon to the top or bottom branch of the interferometer. Of course within a conventional interpretation of quantum mechanics, the photon traverses both arms of the interferometer in superposition, whereas in Bohmian mechanics the photon is guided by the pilot wave along one of the paths. 
-\begin{figure}[ht]
+\begin{figure}[t]
     \centering
-    \includegraphics[width=\linewidth]{Fig1schematic.png}
+    \includegraphics[width=.5\linewidth]{Fig1schematic.png}
     \caption{Schematic diagram illustrating the geometry of the setup. The adjustable mirrors control the path of the photon in the transverse direction, which can be tuned to produce a head-on collision (a) or a grazing collision (b).}
     \label{fig:setup}
 \end{figure}
@@ -307,9 +335,9 @@ where we have defined the following functions of $(x,t)$:
 \end{align}
 Equations (\ref{jkeq18}) and (\ref{eq14}) are inserted into Eq.\ (\ref{bohmianvelocity10}) to obtain the velocity field of the particle. In the limits $\alpha = 0$ or $\alpha = 1$, one obtains an entirely left- or right-moving wavepacket respectively, that is, $V(x,t) = \mp 1$. Meanwhile for $0 < \alpha < 1$, the non-zero cross terms emerge, introducing interference fringes in the density. 
 
-\begin{figure}[h]
+\begin{figure}[htp]
     \centering
-    \includegraphics[width=0.8\linewidth]{Fig2trajectoriessimplified.png}
+    \includegraphics[width=0.5\linewidth]{Fig2trajectoriessimplified.png}
     \caption{Plots of the Bohmian trajectories with $k_0/\sigma = 15$. In the background of both plots is the quantum-mechanical prediction for the probability density of the particles, $\rho_{K}(x,t)$. In (a), the trajectories are completely right-moving and maintain a Gaussian distribution, according to the initial conditions that we have chosen to match the wavefunction density. In (b), we have considered the superposition case, wherein the photon follows a path which matches the interference pattern predicted by $\rho_K(x,t)$. }
     \label{fig:trajectories1}
 \end{figure}
@@ -318,9 +346,9 @@ Before analysing the particle trajectories, it must be noted that Eq.\ (\ref{eq1
 
 In Fig.\ \ref{fig:trajectories1}, we have plotted the Bohmian trajectories for the particles in the head-on collision scenario for different weightings of the superposition parameter $\alpha$. The trajectories for different initial conditions (spaced in proportion to the wavepacket density) are shown in white, superimposed on top of the Klein-Gordon density. In Fig.\ \ref{fig:trajectories1}(a), the particles are moving solely in the right-moving direction. As expected for relativistic massless particles, the trajectories maintain a Gaussian profile without dispersion. Importantly, the density of trajectories corresponds exactly with the Klein-Gordon probability density, and this matching condition holds for all time. This is an essential consistency requirement of Bohmian mechanics, and the continuity equation plays a crucial role in ensuring this condition. Likewise in the equal superposition case, the density of trajectories matches exactly with the interference pattern predicted by $\rho_K(x,t)$. In regions of constructive interference the trajectories bunch up, while the opposite occurs for regions of destructive interference. Notably, some of the trajectories become superluminal in regions of destructive interference. 
 
-\begin{figure}[h]
+\begin{figure}[htp]
     \centering
-    \includegraphics[width=0.8\linewidth]{Fig6boostedsimplified.png}
+    \includegraphics[width=0.6\linewidth]{Fig6boostedsimplified.png}
     \caption{Plot of the Bohmian trajectories with respect to the boosted coordinates of an observer who is moving at $v = 0.125$ with respect to the lab frame. We have used the parameters $k_0/\sigma  = 15$ as in Fig.\ \ref{fig:trajectories1}. }
     \label{fig:trajectoriesboost1}
 \end{figure}
@@ -329,9 +357,9 @@ In Fig.\ \ref{fig:trajectoriesboost1}, we have plotted the Bohmian trajectories 
 
 \subsubsection{Relativistic grazing regime} 
 We can also consider the general case with energy dispersion $E(k) = \sqrt{k^2 + k_z^2}$. If $k_z$ is constant and small but non-zero, this represents a grazing collision regime shown in Fig.\ \ref{fig:setup}(b). Since there is no simple expression in terms of elementray functions for the wavefunction integrals, we utilise a numerical analysis for this case. 
-\begin{figure}[h]
+\begin{figure}[htp]
     \centering
-    \includegraphics[width=0.8\linewidth]{Fig4subrelativistic.png}
+    \includegraphics[width=0.6\linewidth]{Fig4subrelativistic.png}
     \caption{Bohmian trajectories in for a generic relativistic dispersion with $k_0/\sigma = 6$, $k_z/\sigma = 24$ and $\alpha = 1/2$. The effect of $k_z$ is to introduce some dispersion in the trajectory density as the particles propagate in time. }
     \label{fig:subrelativistic}
 \end{figure}
@@ -357,7 +385,7 @@ Notably, Eq.\ (\ref{22paraxial}) yields the same result as that derived by Wisem
 \begin{align}\label{wiseman}
     V(x,t) &= \lim_{\delta t \to 0 } \frac{1}{\delta t} \left[ x - \prescript{}{\langle x | }{\langle \hat{x}_w \rangle}_{|\psi(t) \rangle} \right] .
 \end{align}
-\begin{figure}[h]
+\begin{figure}[htp]
     \centering
     \includegraphics[width=0.8\linewidth]{Fig3paraxialtrajectoriesb.png}
     \caption{Plots of the Bohmian trajectories with $k_0/\sigma = 5$, $k_z/\sigma = 500$. As in the relativistic grazing limit, the particles exhibit dispersion as they propagate in time. Notably, this occurs on a much larger timescale as compared with the relativistic cases.}
@@ -397,9 +425,9 @@ As emphasised throughout this work, we have employed an optical approximation in
 
 As noted previously, the matching condition between the density of Bohmian trajectories and the density of the guiding wave holds for all time, and this is true even in regions of negative density. In these regions, the tangent vector to the trajectory becomes negative, yielding particle trajectories which travel backwards in time. The negative density of these backward-in-time trajectories matches the regions of `negativity' in the wavefunction density, demonstrating the mathematical consistency of our theory in these regimes. Notably, it is well-known that the weak values of positive operators can be negative \cite{puseyPhysRevLett.113.200401,Hosoya_2010,sokolovskiPhysRevA.76.042125,johansenPhysRevA.70.052115,aharonovPhysRevA.72.052111}. However, a consistent physical interpretation of these trajectories likely requires an extension of our theory to a full field-theoretic description of the Bohmian mechanics that can handle multi-particle states. For example, one would expect that a more complete measurement model is needed, particularly one which is valid outside the optics limit we have considered here. By leaving the optical limit, one enters a subcycle regime (i.e.\ measurements occurring at timescales shorter than a single wavelength of light), wherein effects such as particle production emerge, a description requiring a full quantum field theory \cite{Riek_2017}. The mathematical consistency of our single-particle relativistic theory may give some guidance in such an endeavour. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
-    \includegraphics[width=0.925\linewidth]{Fig5negative.png}
+    \includegraphics[width=0.6\linewidth]{Fig5negative.png}
     \caption{Bohmian trajectories in the head on limit, viewed from a boosted reference frame with $v = 0.4$, $k_0/\sigma = 6$ and $\alpha = 1/2$. The trajectories are superimposed over the corresponding Klein-Gordon density, where the respective legends show the magnitude of the positive and negative density regions. The lower panel shows a zoomed in view of the trajectories. }
     \label{fig:negative}
 \end{figure}
