--- a/1406.1371/main.tex
+++ b/1406.1371/main.tex
@@ -227,6 +227,7 @@ On the question of Humeanism versus dispositionalism we side with dispositionali
 We are grateful to two anonymous referees for helpful comments on the first version of the paper.\\
 
 \newpage 
+\raggedright
 \section*{References}
 
 \small{
