--- a/1406.1371/main.tex
+++ b/1406.1371/main.tex
@@ -100,8 +100,10 @@ Bohmian mechanics provides for an ontology of non-relativistic quantum mechanics
 i \hbar \frac{\partial \Psi_t}{\partial t} & = \hspace*{.5cm} H \Psi_t \hspace*{1.8cm} \text{\normalsize (Schr\"odinger's equation)}
 \end{cases}
 \end{align*}
-In these equations, $Q$ denotes the spatial configuration of $N$ particles in three-dimensional space and $\Psi_t$ the wave-function of that particle configuration at time $t$. The guiding equation involves the wave-function whose role is to yield a velocity vector field along which the particles move. The theory is a first order theory; that is to say, given the wave-function it is sufficient to specify the positions of all particles at a given time to calculate future and past motion.\\
-When Bohm reintroduced the theory in 1952 (after de Broglie's (1928) presentation of the equations) (Bohm 1952, see also Bohm and Hiley 1993, Holland 1993), he chose to write the wave-function in polar form for which the Schr\"odinger equation splits into two equations. One of them is analogous to the Hamilton-Jacobi equation albeit with an additional term, which he called the quantum potential. He then set out to explain various aspects of the motion of particles in terms of this quantum potential, an explanation that allowed to appeal to Newtonian intuitions. He called the theory a causal interpretation of quantum mechanics, as if the ``quantum force'', the gradient of the quantum potential, could be regarded as the cause of certain strange movements of the particles.\\
+In these equations, $Q$ denotes the spatial configuration of $N$ particles in three-dimensional space and $\Psi_t$ the wave-function of that particle configuration at time $t$. The guiding equation involves the wave-function whose role is to yield a velocity vector field along which the particles move. The theory is a first order theory; that is to say, given the wave-function it is sufficient to specify the positions of all particles at a given time to calculate future and past motion.
+
+When Bohm reintroduced the theory in 1952 (after de Broglie's (1928) presentation of the equations) (Bohm 1952, see also Bohm and Hiley 1993, Holland 1993), he chose to write the wave-function in polar form for which the Schr\"odinger equation splits into two equations. One of them is analogous to the Hamilton-Jacobi equation albeit with an additional term, which he called the quantum potential. He then set out to explain various aspects of the motion of particles in terms of this quantum potential, an explanation that allowed to appeal to Newtonian intuitions. He called the theory a causal interpretation of quantum mechanics, as if the ``quantum force'', the gradient of the quantum potential, could be regarded as the cause of certain strange movements of the particles.
+
 The theory, being a first order theory no matter what, is however not Newtonian, and the explanatory value of Newtonian concepts like the one of the quantum potential is dubious. The version of the theory known today as Bohmian mechanics is committed only to particles and their positions; these are the local beables in Bell's sense (Bell 1987, ch. 7) or the primitive ontology in the sense of Goldstein (1998). Furthermore, it is committed to a law of motion that describes how the positions of the particles develop in time. That's all (see notably D\"urr, Goldstein and Zangh\`i 1997, Goldstein and Teufel 2001 and D\"urr and Teufel 2009 for a textbook presentation). In particular, Newtonian concepts like acceleration and forces do not enter the formulation of the theory, and velocities are not an additional, independent parameter.\\
 Bohmian mechanics, thus conceived, raises the question of the status of the law of motion and thereby the one of the status of the wave-function, since the wave-function figures in the law. This question has not been answered in a satisfactory manner in the philosophical literature as yet. The aim of this paper is to investigate the possible answers to this question. To start with, we recall the open questions that the traditional view of considering the wave-function as an element of physical reality that guides the motion of the particles faces (section 2). We then discuss two possible stances for grounding the law of motion in the primitive ontology of Bohmian mechanics: the Humean one that regards the law as a contingent regularity (section 3) and the one that anchors the law in a disposition of motion of the particles (section 4). We point out the advantages of dispositionalism (section 5). In conclusion, we briefly explain how the results of this paper apply to primitive ontology approaches to quantum mechanics in general (section 6).
 
