--- a/1402.6144/miw_final.tex
+++ b/1402.6144/miw_final.tex
@@ -1,8 +1,47 @@
-\documentclass[twocolumn,aps,pra,amsmath,amssymb,superscriptaddress]{revtex4}
+\documentclass[12pt, aps,pra,amsmath,amssymb,superscriptaddress]{revtex4-2}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[small]{titlesec}
+%\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage{bm,color,bbm}
 \usepackage{soul}  %use \st
-\usepackage{hyperref,mathtools,graphicx}
+\usepackage{mathtools,graphicx}
 
 \newcommand{\ie}{{\em i.e.}}
 \newcommand{\fig}[1]{Fig.~\ref{#1}}
@@ -139,7 +178,7 @@
 
 
 \maketitle
-
+\newpage
 
 \section{Introduction}
 
