--- a/superposition/sup2.tex
+++ b/superposition/sup2.tex
@@ -15,16 +15,8 @@
 \def\m0{| M_0 \rangle}
 \def\M0{ M_0 }
 
-\makeatletter
+\input{../helpers/cmrsum}
 
-\@ifpackageloaded{amsmath}{}{\RequirePackage{amsmath}}
-\DeclareSymbolFont{Llargesymbols}{OMX}{hlcv}{m}{n}
-\DeclareMathSymbol{\Sigma}{\mathord}{Llargesymbols}{'326}
-\DeclareMathSymbol{\sum@}{\mathop}{Llargesymbols}{"50}
-\DeclareMathSymbol{\prod@}{\mathop}{Llargesymbols}{"51}
-\DeclareMathSymbol{\Pi}{\mathord}{Llargesymbols}{'325}
-
-\makeatother
 
 
 \begin{document}
