--- a/superposition/sup.tex
+++ b/superposition/sup.tex
@@ -1,7 +1,7 @@
 \documentclass[20pt]{extreport}
 
-\def\a{|\psi_1\rangle}
-\def\b{|\psi_2\rangle}
+\def\a{|\,\psi_1\rangle}
+\def\b{|\,\psi_2\rangle}
 \def\la{\langle \psi_1}
 \def\lb{\langle \psi_2}
 \def\da{|M_{1}\rangle}
@@ -15,23 +15,14 @@
 %\usepackage[largesc]{newpxtext}
 \usepackage{eulervm}
 
-\makeatletter
-
-\@ifpackageloaded{amsmath}{}{\RequirePackage{amsmath}}
-\DeclareSymbolFont{Llargesymbols}{OMX}{hlcv}{m}{n}
-\DeclareMathSymbol{\Sigma}{\mathord}{Llargesymbols}{'326}
-\DeclareMathSymbol{\sum@}{\mathop}{Llargesymbols}{"50}
-\DeclareMathSymbol{\prod@}{\mathop}{Llargesymbols}{"51}
-\DeclareMathSymbol{\Pi}{\mathord}{Llargesymbols}{'325}
-
-\makeatother
+\input{../helpers/cmrsum}
 
 
 \begin{document}
 $$\displaystyle |\psi\rangle \m0 = (\a + \b)\m0 \to   \a\da + \b\db
 $$
 
-$$\displaystyle \psi  \m0 = \big(\sum_n c_n|\psi_n\rangle\big)  \m0 \to  \sum_n (c_n |\psi_n\rangle  |M_n\rangle)
+$$\displaystyle \psi  \m0 = \big(\sum_n c_n|\,\psi_n\rangle\big)  \m0 \to  \sum_n (c_n |\psi_n\rangle  |M_n\rangle)
 $$
 
 $$\displaystyle \psi  \otimes \M0 = \big(\sum_n c_n\psi_n\big) \otimes \M0 \to  \sum_n (c_n \psi_n  \otimes M_n)
