--- a/quant-ph-0303156/crlet.tex
+++ b/quant-ph-0303156/crlet.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, showpacs, superscriptaddress]{revtex4-2}%
+\documentclass[12pt, showpacs, nofootinbib,superscriptaddress]{revtex4-2}%
 %\documentclass[12pt]{article}
 \usepackage{amsfonts,amsmath,amssymb,graphicx}
 
@@ -119,7 +119,15 @@ impossible, we show how, with (more or less) any regularized quantum
 field theory (QFT), one can associate a particle theory --- describing
 moving particles --- that is empirically equivalent to that QFT. In
 particular, there is a particle theory that recovers all predictions
-of regularized QED \cite{footn1}.
+of regularized QED.\footnote{One may worry that such a particle theory, in which
+particles always have actual positions but have no additional actual
+discrete degrees of freedom corresponding for example to spin, cannot
+do justice to QFT, for which spin and other discrete degrees of
+freedom are often regarded as playing a crucial role. However,
+additional actual discrete degrees of freedom are entirely
+unnecessary: as Bell has shown in \cite{1966}, the straightforward
+extension of Bohmian mechanics to spinor-valued wavefunctions, which
+we use here, accounts for all phenomena involving spin.}
 
 However, we will not attempt to achieve full Lorentz invariance; that
 would lead to quite a different set of questions, orthogonal to those
@@ -456,7 +464,7 @@ introducing suitable laws of motion.
 
 
 \begin{thebibliography}{28.}
-
+\raggedright
 
 \bibitem{Bohm52} D.~Bohm,
    % ``A Suggested Interpretation of the Quantum
@@ -477,16 +485,6 @@ introducing suitable laws of motion.
    http://plato.stanford.edu/archives/ win2002/entries/qm-bohm/.
 
 \bibitem{weinlet} S.~Weinberg (private communication).
-
-\bibitem{footn1} One may worry that such a particle theory, in which
-particles always have actual positions but have no additional actual
-discrete degrees of freedom corresponding for example to spin, cannot
-do justice to QFT, for which spin and other discrete degrees of
-freedom are often regarded as playing a crucial role. However,
-additional actual discrete degrees of freedom are entirely
-unnecessary: as Bell has shown in \cite{1966}, the straightforward
-extension of Bohmian mechanics to spinor-valued wavefunctions, which
-we use here, accounts for all phenomena involving spin.
 
 \bibitem{1966} J.~S.~Bell,
     % ``On the problem of hidden variables in quantum mechanics,''
