--- a/1403.0014/QMasCParxiv4.tex
+++ b/1403.0014/QMasCParxiv4.tex
@@ -203,10 +203,11 @@ Plugging \eqref{first} into the guidance equation \eqref{guideq} generates
 relating $\vv{v}_k$ and $\theta$.  (At this point, I will stop repeating the arguments of $\Psi$, $\rho$, $\theta$, and $\vv{v}_k$; they \emph{all} depend on the configuration of particles and the time.)
 
 The evolution of the wave function $\Psi$ is given by the Schr\"{o}dinger equation \eqref{schrod}.  Dividing both sides of \eqref{schrod} by $\Psi$ and using \eqref{first}, one can derive that
-\begin{equation}
-\frac{i\hbar}{2\rho}\frac{\partial\rho}{\partial t}-\hbar \frac{\partial \theta}{\partial t} = \sum_k{\frac{-\hbar^2}{2 m_k}\left[\frac{\nabla_k^2 \sqrt{\rho}}{\sqrt{\rho}}+\frac{2 i}{\sqrt{\rho}} \left(\vv{\nabla}_k \sqrt{\rho}\right)\cdot\left(\vv{\nabla}_k \theta\right) + i \: \nabla_k^2 \theta - \left|\vv{\nabla}_k \theta\right|^2\right]}+V\ .
+\begin{multline}
+\frac{i\hbar}{2\rho}\frac{\partial\rho}{\partial t}-\hbar \frac{\partial \theta}{\partial t} = \\
+\sum_k{\frac{-\hbar^2}{2 m_k}\left[\frac{\nabla_k^2 \sqrt{\rho}}{\sqrt{\rho}}+\frac{2 i}{\sqrt{\rho}} \left(\vv{\nabla}_k \sqrt{\rho}\right)\cdot\left(\vv{\nabla}_k \theta\right) + i \: \nabla_k^2 \theta - \left|\vv{\nabla}_k \theta\right|^2\right]}+V\ .
 \label{astep}
-\end{equation}
+\end{multline}
 Equating the imaginary parts, using \eqref{guideq2}, yields
 \begin{equation}
 \frac{\partial\rho}{\partial t}=-\sum_k{\vv{\nabla}_k \cdot \left(\rho\vv{v}_k\right)}\ ,
