--- a/1403.0014/QMasCParxiv4.tex
+++ b/1403.0014/QMasCParxiv4.tex
@@ -230,7 +230,7 @@ m_j \vv{a}_j=-\vv{\nabla}_j\left[\sum_k \frac{-\hbar^2}{2 m_k }\left(\frac{\nabl
 \end{equation}
 We have derived an equation of motion of the form $F=ma$, similar to both \eqref{oldeom} and \eqref{fluideom}.\footnote{This is the multi-particle version of \citet[][eq. 1.7]{wyatt2005}; \citet[][eq. 4.9]{holland2005}.}  The last term in the brackets gives the \emph{classical} potential energy of the configuration of particles and makes no reference to the other worlds.  The other term looks like an \emph{interaction} between the worlds. This term is the quantum potential $Q$ familiar from Bohmian mechanics \eqref{defofQ}, with $|\Psi|$ replaced by $\sqrt{\rho}$.
 
-Within Prodigal QM, we've seen that one can derive an equation which determines the dynamics for all of the particles in all of the worlds \emph{without ever referencing the wave function}.  \eqref{eom} gives a way of calculating the acceleration of a particle that doesn't mention $\Psi$, as \eqref{guideq} does, but only depends on the density of worlds $\rho$ and the potential $V$.  In Prodigal QM, this equation is derived, not part of the statement of the theory in the previous section.  But, what if we took it to be the primary equation of motion for the particles?  One can remove the wave function from Prodigal QM leaving only the corresponding $\rho$ and $\vv{v}_k$s.  So long as one enforces \eqref{eom}, the dynamics for particles will be essentially as they were in Prodigal QM.
+Within Prodigal QM, we've seen that one can derive an equation which determines the dynamics for all of the particles in all of the worlds \emph{without ever referencing the wave function}.  Equation \eqref{eom} gives a way of calculating the acceleration of a particle that doesn't mention $\Psi$, as \eqref{guideq} does, but only depends on the density of worlds $\rho$ and the potential $V$.  In Prodigal QM, this equation is derived, not part of the statement of the theory in the previous section.  But, what if we took it to be the primary equation of motion for the particles?  One can remove the wave function from Prodigal QM leaving only the corresponding $\rho$ and $\vv{v}_k$s.  So long as one enforces \eqref{eom}, the dynamics for particles will be essentially as they were in Prodigal QM.
 
 Now we can formulate a new theory: \emph{Newtonian QM}.  Reality consists of a large but finite number of worlds whose distribution in configuration space is described by $\rho(\vv{x}_1,\vv{x}_2,...,t)$.  The velocities of the particles in the worlds are described by the velocity fields $\vv{v}_k(\vv{x}_1,\vv{x}_2,...,t)$.  The dynamical law for the velocity fields is \eqref{eom}, a Newtonian force law.  As the particles move, the resultant shift in the distribution $\rho$ is determined by \eqref{hamster}.  According to Newtonian QM, quantum mechanics is nothing but the Newtonian mechanics of particles in many different worlds.
 \vspace*{6 pt}\\\hspace*{1.2cm}\textbf{Ontology:} (I) particles in many worlds described by a world density $\rho(\vv{x}_1,\vv{x}_2,...,t)$
