--- a/hep-th-0012253/main.tex
+++ b/hep-th-0012253/main.tex
@@ -114,7 +114,7 @@ In fact, confrontation of eq.(\ref{Einstein1917}) with observations
 shows that $\Lambda$ is very small: Solar system and galactic 
 observations already put an upper bound on the
 $\Lambda$-term, but the tightest bound come from large scale cosmology
-(see e.g. Carroll et al (1992) \cite{Carrolletal92}), 
+(see e.g. \cite{Carrolletal92}), 
 \beq
 |\Lambda| < 10^{-56} cm^{-2}
 \eeq
@@ -250,7 +250,7 @@ history of the cosmological constant as seen from the quantum (vacuum)
 point of view.  We will review this history with particular emphasis
 on the events which have transformed or reconceptualized the
 cosmological constant problem, in order to clarify how it came 
-to be seen as a fundamental problem for modern physics. \\
+to be seen as a fundamental problem for modern physics.
 
 
 \ss{Early history}
